# cmemu

./: Cargo.toml  GUIDELINES.md  QUICK-START.md  README.md  TESTS-GUIDELINES.md  clippy.toml  deny.toml  poors-man-ci.sh
cmemu/: Cargo.toml  README.md
cmemu-codegen/: Cargo.toml  README.md
cmemu-codegen/src/: components.rs  data_macros.rs  graph.rs  lib.rs  proc.rs  utils.rs
cmemu-codegen/src/components/: clock_tree.rs  conf.rs  parsing.rs
cmemu-codegen/src/data_macros/: injected_macros.rs
cmemu-codegen/src/proc/: component.rs  decode_instr.rs
cmemu-codegen/src/proc/component/: component_impl.rs  derive_disableable_component.rs  derive_main_component.rs  derive_tick_component.rs  derive_tick_component_extra.rs  handler.rs  proxy_use.rs
cmemu-codegen/src/proc/decode_instr/: instr_macro.rs
cmemu-codegen/src/utils/: meta_dict.rs
cmemu-common/: Cargo.toml  README.md
cmemu-common/src/: address.rs  hw_register.rs  lib.rs
cmemu-elf-loader/: Cargo.toml  README.md  build.rs
cmemu-elf-loader/cmemu-target/: .gitignore  Makefile.base  README.md  cc26xx.S  cc26xx.lds  cmemu-crt1.S  newlib_funs.c  semihosting.h
cmemu-elf-loader/live_playground/: .gitignore  Makefile  contiki-aes.c  libc_playground.c  minimal.S  playground.S
cmemu-elf-loader/src/: lib.rs  os.rs  symbols.rs
cmemu-elf-loader/tests/: loader.rs  os_arguments.rs  symbols.rs  test.elf
cmemu-flash-test/: Cargo.toml  README.md
cmemu-flash-test-lib/: Cargo.toml  README.md
cmemu-flash-test-lib/src/: lib.rs
cmemu-flash-test/src/: main.rs
cmemu-gdb/: Cargo.toml  README.md
cmemu-gdb/gdb-presets/: contiki_test-verbose_sleep
cmemu-gdb/src/: arch.rs  gdb.rs  lib.rs
cmemu-gdb/src/arch/: target.xml
cmemu-gdb/src/gdb/: flash_test_lib.rs  monitor.rs
cmemu-lib/: Cargo.toml  README.md  build.rs  cmemu_build_conf.yaml  confeature.yml
cmemu-lib/src/: common.rs  component.rs  engine.rs  lib.rs  proxy.rs  test_utils.rs  utils.rs
cmemu-lib/src/common/: bitstring.rs  new_ahb.rs  new_memory.rs  pending.rs  shift.rs  utils.rs
cmemu-lib/src/common/bitstring/: bitfield.rs  word.rs
cmemu-lib/src/common/new_ahb/: README.md  arbiter.rs  cdl.rs  databus.rs  decoder.rs  input_stage.rs  interconnect.rs  line_buffer.rs  master_driver.rs  output_stage.rs  ports.rs  signals.rs  slave_driver.rs  state_track.rs  vlan.rs  write_buffer.rs
cmemu-lib/src/component/: ahb_wiring.rs  aon_bus.rs  aon_event.rs  bitband.rs  bus_matrix.rs  clock_tree.rs  core.rs  cycle_debug_logger.rs  dwt.rs  event_fabric.rs  flash.rs  gpio.rs  gpram.rs  mem_mock.rs  memory_bypass.rs  nvic.rs  osc.rs  prcm.rs  rfc.rs  rom.rs  rtc.rs  rtc_bypass.rs  semi_hosting.rs  sram.rs  sync_down_bridge.rs  sysbus.rs  uart_lite.rs  vims.rs  wuc.rs
cmemu-lib/src/component/bus_matrix/: aligner.rs  bitband.rs  interconnect.rs  internal_routing.rs  mpu.rs  ppb.rs  registration_buffer.rs
cmemu-lib/src/component/clock_tree/: README.md  nodes.rs  oscillators.rs
cmemu-lib/src/component/core/: CONFEATURE.md  builtins.rs  decode.rs  execute.rs  fetch.rs  instruction.rs  interrupt.rs  lsu.rs  register_bank.rs
cmemu-lib/src/component/cycle_debug_logger/: render_json_log.rs
cmemu-lib/src/component/mem_mock/: autogenerated.rs
cmemu-lib/src/component/nvic/: register_bank.rs  stir.rs  system_control_block.rs  systick.rs
cmemu-lib/src/component/rfc/: command.rs  register_bank.rs  timing.rs
cmemu-lib/src/component/vims/: cache.rs  cache_ram.rs  idcode_mux.rs  interconnect2.rs  internal_routing.rs  registers.rs
cmemu-lib/src/engine/: component_traits.rs  context.rs  emulator.rs  event_queue.rs  flop.rs  stm.rs  time.rs
cmemu-lib/src/engine/emulator/: component_api.rs
cmemu-lib/tests/: bitstring.rs  hw_register.rs
cmemu-proc-macros/: Cargo.toml  README.md
cmemu-proc-macros/src/: lib.rs
cmemu-proc-macros/tests/: decode_instr.rs
cmemu-tests/: Cargo.toml  README.md  build.rs  cmemu-bin-dep.rs
cmemu-tests/src/: lib.rs
cmemu-tests/tests/: debug_mode_checks.rs  elf.rs  flash.rs  no_allocations.rs
cmemu-tests/tests/cc2652/benchmarks/: STREAM.tzst  iotbench.tzst
cmemu-tests/tests/cc2652/misc/: agu_double.asm  agu_double.tzst  array_list.asm  array_list.tzst  branch_distance.asm  branch_distance.tzst  branch_distance_memory.asm  branch_distance_memory.tzst  builtins_test.asm  builtins_test.tzst  bx_lr_errata_flash_code_flash_data.asm  bx_lr_errata_flash_code_flash_data.tzst  bx_lr_errata_flash_code_sram_data.asm  bx_lr_errata_flash_code_sram_data.tzst  bx_lr_errata_sram_code_sram_data_flash_speculative.asm  bx_lr_pressure.asm  bx_lr_pressure.tzst  decode_fetch_reqs.asm  decode_fetch_reqs.tzst  dijkstra.asm  dijkstra.tzst  linked_list.asm  linked_list.tzst  mocked_addrs.asm  mocked_addrs.tzst  pfu_check_queue.asm  pfu_check_queue.tzst  pfu_overwrite_extended.asm  pfu_overwrite_extended.tzst  pipelining_depending_on_memory_type.asm  pipelining_depending_on_memory_type.tzst  postpone_advance_head_is_dead_end.tzst  reads_writes_pipelining.asm  reads_writes_pipelining.ignore  reads_writes_pipelining.tzst  sbtf_is_promoted_to_btf.tzst  skipped_branch_distance.asm  skipped_branch_distance.tzst  skipped_branch_distance_memory.asm  skipped_branch_distance_memory.tzst  (+11 more)
cmemu-tests/tests/elf/: contiki.rs  hosted.rs  whip6.rs
cmemu-tests/tests/elf/hosted/: Makefile  README.md  asm_complex_hosting.S  asm_complex_hosting.elf  contiki-aes.c  contiki-aes.elf  mandelbrot.c  mandelbrot.elf  min_max_example_from_paper.S  min_max_example_from_paper.elf  minimal.S  minimal.elf  panic.c  panic.elf  test_syscalls.c  test_syscalls.elf  test_syscalls_io.c  test_syscalls_io.elf  umull_mla_bug.c  umull_mla_bug.elf
cmemu-tests/tests/flash/benchmarks/: STREAM.asm  STREAM.tzst  iotbench.asm  iotbench.tzst  paper-scope.xargs
cmemu-tests/tests/flash/cache/: changing_time.asm  changing_time.ignore  changing_time.tzst  code_in_flash.asm  (+34 more)
cmemu/src/: lib.rs  main.rs
confeature/: Cargo.toml  README.md  clippy.toml
confeature/src/: builder.rs  deser.rs  elf_note.rs  lib.rs  main.rs
pretty_flexi_logger/: Cargo.toml  README.md
pretty_flexi_logger/src/: lib.rs
(+1503 files in other folders)
