[package]
name = "cmemu-codegen"
version = "0.1.0"
edition = "2024"
description = "Generates Rust code in CMEmu (cmemu-lib)."
homepage = "https://mimuw-distributed-systems-group.github.io/cmemu/"
repository = "https://github.com/mimuw-distributed-systems-group/cmemu"
license = "MIT OR Apache-2.0"
keywords = ["CMEmu"]
categories = ["emulators"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
syn = { version = "2.0.104", features = ["full", "visit-mut", ] }
quote = "1.0"
anyhow = "1.0"
itertools = "0.14.0"
proc-macro2 = "1.0"

[lints]
workspace = true
