[package]
name = "cmemu-lib"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "A cycle-exact timing emulator of a Cortex-M3-based microcontroller—Texas Instruments CC2650—synthesized using solely in-code timing measurements and publicly available documentation."
homepage = "https://mimuw-distributed-systems-group.github.io/cmemu/"
repository = "https://github.com/mimuw-distributed-systems-group/cmemu"
license = "MIT OR Apache-2.0"
keywords = ["ARM Cortex-M", "TI CC2650", "cycle-exact timing model", "microcontroller emulator", "CMEmu"]
categories = ["emulators"]

# TODO:
# PGO: https://blog.rust-lang.org/2019/08/15/Rust-1.37.0.html#profile-guided-optimization
# script from here(?): https://doc.rust-lang.org/rustc/profile-guided-optimization.html

[features]
default = ["pretty_log", "nm-unstable"]

matrach-default = ["pretty_log", "nm-unstable", "paranoid", "poison-unitialized"]

# Enables Cycle Debug Logger (abbr. CDL). Opting out makes emulator faster.
cycle-debug-logger = ["serde", "serde_json", "dep:flate2", "heapless/serde"]
cdl-black-box = ["cycle-debug-logger", "dep:tempfile"]
cdl-ahb-trace = ["cycle-debug-logger"]
# Note: owo has a feature for color support
pretty_log = ["cc2650-constants/register-names"]
# Extra code required by `cmemu-flash-test-lib`
flash-test-lib = []

# paranoid mode to abort on any undesired behavior of the app
paranoid = []
# Don't enable on --all-features
no_paranoid_override = []
# Rudimentary support for tracing (ake more mocks, less checks)
frankentrace = []

# panic when reading from uninitialized memory (this has some false-positives for now; i.e., special handling of prefetch)
poison-unitialized = []

# Variant customisation
soc-has-mpu = []
soc-cc2652 = ["cc2650-constants/soc-cc2652"]
soc-stm32f100rbt6 = ["cc2650-constants/soc-stm32f100rbt6"]

# Help other work on my branch `newer-model`
nm-unstable = []

# ------ Consult `Cargo dependencies` in `GUIDELINES.md` before changing. ------
[dependencies]
cmemu-common = { path = "../cmemu-common/" }
cmemu-proc-macros = { path = "../cmemu-proc-macros/" }
cc2650-constants = { path = "../cc2650-constants/" }
log = "0.4"
enum-map = "2.7.3"
num_enum = "0.7"
paste = "1.0"
thiserror = "1.0"
heapless = { version = "0.9.1", features = [] }
itertools = "0.14"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
flate2 = { version = "1.1", optional = true }

owo-colors = { version = "3.3" }
clap = { version = "4.5", features = ["derive"], optional = true }
fixedbitset = "0.5"
modular-bitfield = "0.11.2"
strum = { version = "0.27", features = ["derive"] }
tempfile = { version = "3.7.0", optional = true }
fastrand = "2.0.0"
scopeguard = "1.2.0"

confeature = { path = "../confeature/", features = ["runtime"] }
# This is a necessary leak of abstraction from confeature, as we cannot generate code that uses this crate
# (even if we pull it with the above), as it is not imported (put to extern) otherwise. And re-exposing doesn't work either.
static_init = { version = "1.0.3", optional = false }


[build-dependencies]
cmemu-codegen = { path = "../cmemu-codegen/" }
version_check = "0.9"

# See a note in build.rs
confeature = { path = "../confeature/", features = ["comptime"] }

[dev-dependencies]
rstest = "0.25.0"
test-log = "0.2"
env_logger = "*"
owo-colors = "3.5"

[lints]
workspace = true
